--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,9 @@
 <h1>{{title}}</h1>
 
 <header>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'none'; 
+        connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
 
     <a href="/">Weather</a>
     <a href="/about">About Us</a>
