--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'none'; 
+        connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
